{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 16,
  "lineage": "dc73ed60-03a1-9765-674b-ea3dd43afad2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "RSP_IOT_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09be5b317cf62fd37",
            "arn": "arn:aws:ec2:ap-south-1:034362062877:elastic-ip/eipalloc-09be5b317cf62fd37",
            "domain": "vpc",
            "id": "eipalloc-09be5b317cf62fd37",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-31-188.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.31.188",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be3e81942020f789",
            "arn": "arn:aws:ec2:ap-south-1:034362062877:elastic-ip/eipalloc-0be3e81942020f789",
            "association_id": "eipassoc-0b17458aa135c23ca",
            "domain": "vpc",
            "id": "eipalloc-0be3e81942020f789",
            "instance": "i-072a3d59c2956b4f1",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-093ab63af584dd14b",
            "private_dns": "ip-10-10-1-243.ap-south-1.compute.internal",
            "private_ip": "10.10.1.243",
            "public_dns": "ec2-13-203-244-171.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.244.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jenkins_master",
            "aws_internet_gateway.RSP_IOT_igw",
            "aws_security_group.jenkins_sg",
            "aws_subnet.RSP_IOT_public_subnet",
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e35ddab05955cf57",
            "arn": "arn:aws:ec2:ap-south-1:034362062877:instance/i-03cc50d4709a70432",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03cc50d4709a70432",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbaipemkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-052418fccfc8ff09a",
            "private_dns": "ip-10-10-2-31.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0def50ddd26c9b803",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052ecbabdacd015ff",
            "tags": {
              "Name": "Jenkins Slave-1"
            },
            "tags_all": {
              "Name": "Jenkins Slave-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a22064a279746f53"
            ]
          },
          "dependencies": [
            "aws_eip.RSP_IOT_nat_eip",
            "aws_eip.jenkins_eip",
            "aws_instance.jenkins_master",
            "aws_internet_gateway.RSP_IOT_igw",
            "aws_nat_gateway.RSP_IOT_nat",
            "aws_security_group.jenkins_sg",
            "aws_subnet.RSP_IOT_private_subnet",
            "aws_subnet.RSP_IOT_public_subnet",
            "aws_vpc.RSP_IOT_vpc",
            "data.template_file.slave_user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e35ddab05955cf57",
            "arn": "arn:aws:ec2:ap-south-1:034362062877:instance/i-072a3d59c2956b4f1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072a3d59c2956b4f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mumbaipemkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-093ab63af584dd14b",
            "private_dns": "ip-10-10-1-243.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.243",
            "public_ip": "43.205.116.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-004ec03761a1ce34d",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09180d09db4852126",
            "tags": {
              "Name": "Jenkins Master"
            },
            "tags_all": {
              "Name": "Jenkins Master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a22064a279746f53"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "aws_subnet.RSP_IOT_public_subnet",
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "RSP_IOT_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:internet-gateway/igw-090913a92c1e5d1f4",
            "id": "igw-090913a92c1e5d1f4",
            "owner_id": "034362062877",
            "tags": {
              "Name": "RSP-IOT-IGW"
            },
            "tags_all": {
              "Name": "RSP-IOT-IGW"
            },
            "vpc_id": "vpc-04a620100ba147bb7"
          },
          "dependencies": [
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "RSP_IOT_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09be5b317cf62fd37",
            "association_id": "eipassoc-0063faff80413a66a",
            "connectivity_type": "public",
            "id": "nat-08a0ad302118c67c3",
            "network_interface_id": "eni-085431410e982ae1c",
            "private_ip": "10.10.1.252",
            "public_ip": "43.204.31.188",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09180d09db4852126",
            "tags": {
              "Name": "RSP-IOT-NAT-Gateway"
            },
            "tags_all": {
              "Name": "RSP-IOT-NAT-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.RSP_IOT_nat_eip",
            "aws_internet_gateway.RSP_IOT_igw",
            "aws_subnet.RSP_IOT_public_subnet",
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RSP_IOT_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:route-table/rtb-009814df2776431aa",
            "id": "rtb-009814df2776431aa",
            "owner_id": "034362062877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08a0ad302118c67c3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RSP-IOT Private Route Table"
            },
            "tags_all": {
              "Name": "RSP-IOT Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a620100ba147bb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.RSP_IOT_nat_eip",
            "aws_internet_gateway.RSP_IOT_igw",
            "aws_nat_gateway.RSP_IOT_nat",
            "aws_subnet.RSP_IOT_public_subnet",
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RSP_IOT_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:route-table/rtb-063a2809cfda92b5b",
            "id": "rtb-063a2809cfda92b5b",
            "owner_id": "034362062877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090913a92c1e5d1f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RSP-IOT Public Route Table"
            },
            "tags_all": {
              "Name": "RSP-IOT Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a620100ba147bb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.RSP_IOT_igw",
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RSP_IOT_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b5628edefe04003",
            "route_table_id": "rtb-009814df2776431aa",
            "subnet_id": "subnet-052ecbabdacd015ff"
          },
          "dependencies": [
            "aws_eip.RSP_IOT_nat_eip",
            "aws_internet_gateway.RSP_IOT_igw",
            "aws_nat_gateway.RSP_IOT_nat",
            "aws_route_table.RSP_IOT_private_rt",
            "aws_subnet.RSP_IOT_private_subnet",
            "aws_subnet.RSP_IOT_public_subnet",
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RSP_IOT_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046bf8e6a393f1293",
            "route_table_id": "rtb-063a2809cfda92b5b",
            "subnet_id": "subnet-09180d09db4852126"
          },
          "dependencies": [
            "aws_internet_gateway.RSP_IOT_igw",
            "aws_route_table.RSP_IOT_public_rt",
            "aws_subnet.RSP_IOT_public_subnet",
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:security-group/sg-0a22064a279746f53",
            "description": "Allow Jenkins traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a22064a279746f53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "034362062877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-sg"
            },
            "tags_all": {
              "Name": "jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a620100ba147bb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "RSP_IOT_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:subnet/subnet-052ecbabdacd015ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052ecbabdacd015ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034362062877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RSP-IOT Private Subnet"
            },
            "tags_all": {
              "Name": "RSP-IOT Private Subnet"
            },
            "vpc_id": "vpc-04a620100ba147bb7"
          },
          "dependencies": [
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "RSP_IOT_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:subnet/subnet-09180d09db4852126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09180d09db4852126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034362062877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RSP-IOT Public Subnet"
            },
            "tags_all": {
              "Name": "RSP-IOT Public Subnet"
            },
            "vpc_id": "vpc-04a620100ba147bb7"
          },
          "dependencies": [
            "aws_vpc.RSP_IOT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "RSP_IOT_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:034362062877:vpc/vpc-04a620100ba147bb7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0236993b3903679fc",
            "default_route_table_id": "rtb-0fd7695e1d5c5ceca",
            "default_security_group_id": "sg-07eae6cd046f32b29",
            "dhcp_options_id": "dopt-08a39fda6e1ecfaf9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a620100ba147bb7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd7695e1d5c5ceca",
            "owner_id": "034362062877",
            "tags": {
              "Name": "RSP-IOT"
            },
            "tags_all": {
              "Name": "RSP-IOT"
            }
          }
        }
      ]
    }
  ]
}